ml/grammar.js
    compilation_unit: $ => seq(
      optional($.shebang),
      optional($._structure)
    ),

    _structure: $ => choice(
      repeat1(';;'),
      seq(
        repeat(';;'),
        choice($._structure_item_ext, $.toplevel_directive, $.expression_item),
        repeat(choice(
          seq(repeat(';;'), choice($._structure_item_ext, $.toplevel_directive)),
          seq(repeat1(';;'), $.expression_item)
        )),
        repeat(';;')
      )
    ),

    expression_item: $ => seq(
      $._sequence_expression_ext,
      repeat($.item_attribute)
    ),

    value_definition: $ => seq(
      choice(seq('let', optional($._attribute), optional('rec')), $.let_operator),
      sep1(choice('and', $.and_operator), $.let_binding)
    ),

    let_binding: $ => seq(
      field('pattern', $._pattern_no_exn_ext),
      repeat($._parameter),
      optional($._polymorphic_typed),
      optional(seq(':>', field('coercion', $._type_ext))),
      '=',
      field('body', $._sequence_expression_ext),
      repeat($.item_attribute)
    ),

    _parameter: $ => choice(
      $.parameter,
      alias($._parenthesized_abstract_type, $.abstract_type)
    ),

    parameter: $ => choice(
      field('pattern', $._simple_pattern_ext),
      $.label,
      seq(
        $.label,
        token.immediate(':'),
        field('pattern', $._simple_pattern_ext)
      ),
      seq(
        choice('~', '?'),
        '(',
        $._label_name,
        optional($._typed),
        optional(seq('=', field('default', $._sequence_expression_ext))),
        ')'
      ),
      seq(
        $.label,
        token.immediate(':'),
        '(',
        field('pattern', $._pattern_ext),
        optional($._typed),
        seq('=', field('default', $._sequence_expression_ext)),
        ')'
      )
    ),

    external: $ => seq(
      'external',
      optional($._attribute),
      $.value_name,
      $._typed,
      '=',
      repeat1($.string),
      repeat($.item_attribute)
    ),

    type_definition: $ => seq(
      'type',
      optional($._attribute),
      optional('nonrec'),
      sep1('and', $.type_binding)
    ),

    type_binding: $ => seq(
      optional($._type_params),
      choice(
        seq(
          field('type', $._type_constructor),
          optional($._type_equation),
          optional(seq(
            '=',
            optional('private'),
            field('declaration', choice($.variant_declaration, $.record_declaration, '..'))
          )),
          repeat($.type_constraint)
        ),
        seq(
          field('type', $.type_constructor_path),
          seq(
            '+=',
            optional('private'),
            field('declaration', $.variant_declaration)
          )
        )
      ),
      repeat($.item_attribute)
    ),

    _type_params: $ => choice(
      $._type_param,
      parenthesize(sep1(',', $._type_param))
    ),

    _type_equation: $ => seq(
      choice('=', ':='),
      optional('private'),
      field('equation', $._type_ext)
    ),

    variant_declaration: $ => choice(
      seq('|', sep('|', $.constructor_declaration)),
      sep1('|', $.constructor_declaration)
    ),

    constructor_declaration: $ => seq(
      choice(
        $._constructor_name,
        alias(choice(seq('[', ']'), seq('(', ')'), 'true', 'false'), $.constructor_name)
      ),
      optional(choice(
        seq('of', $._constructor_argument),
        $._simple_typed,
        seq(':', $._constructor_argument, '->', field('type', $._simple_type_ext)),
        seq('=', field('equation', $.constructor_path))
      ))
    ),

    _constructor_argument: $ => choice(
      sep1('*', field('argument', $._simple_type_ext)),
      field('argument', $.record_declaration)
    ),

    record_declaration: $ => seq(
      '{',
      sep1(';', $.field_declaration),
      optional(';'),
      '}'
    ),

    field_declaration: $ => seq(
      optional('mutable'),
      $._field_name,
      $._polymorphic_typed,
    ),

    type_constraint: $ => seq(
      'constraint',
      field('left', $._type_ext),
      '=',
      field('right', $._type_ext)
    ),

    exception_definition: $ => seq(
      'exception',
      optional($._attribute),
      $.constructor_declaration,
      repeat($.item_attribute)
    ),

    module_definition: $ => seq(
      'module', optional($._attribute), optional('rec'),
      sep1('and', $.module_binding)
    ),

    module_binding: $ => seq(
      choice($._module_name, alias('_', $.module_name)),
      repeat($.module_parameter),
      optional($._module_typed),
      optional(seq('=', field('body', $._simple_module_expression_ext))),
      repeat($.item_attribute)
    ),

    module_parameter: $ => parenthesize(optional(seq(
      choice($._module_name, alias('_', $.module_name)),
      $._module_typed
    ))),

    module_type_definition: $ => seq(
      'module', 'type',
      optional($._attribute),
      $._module_type_name,
      optional(seq('=', field('body', $._module_type_ext))),
      repeat($.item_attribute)
    ),

    open_module: $ => seq(
      'open',
      optional('!'),
      optional($._attribute),
      $._simple_module_expression_ext,
      repeat($.item_attribute)
    ),

    include_module: $ => seq(
      'include',
      optional($._attribute),
      $._simple_module_expression_ext,
      repeat($.item_attribute)
    ),

    _module_typed: $ => seq(':', field('type', $._module_type_ext)),

    _module_type_ext: $ => choice(
      $._module_type,
      $._extension
    ),

    _simple_module_expression_ext: $ => choice(
      $._simple_module_expression,
      $._extension
    ),

    _module_expression_ext: $ => choice(
      $._module_expression,
      $._extension
    ),

    module_application: $ => prec.right(2, seq(
      field('functor', $._simple_module_expression_ext),
      parenthesize(optional(field('argument', $._module_expression_ext)))
    )),

    submodule: $ => prec.left(1, seq(
      field('left', $._simple_module_expression_ext),
      '.',
      field('right', $._simple_module_expression_ext)
    )),

    _typed: $ => seq(':', field('type', $._type_ext)),

    _simple_typed: $ => seq(':', field('type', $._simple_type_ext)),

    _polymorphic_typed: $ => seq(':', field('type', $._polymorphic_type)),

    polymorphic_type: $ => seq(
      choice(
        repeat1($.type_variable),
        alias($._abstract_type, $.abstract_type)
      ),
      '.',
      field('type', $._type_ext)
    ),

    _abstract_type: $ => seq(
      'type',
      repeat1($._type_constructor)
    ),

    _simple_type_ext: $ => choice(
      $._simple_type,
      $._extension
    ),

    _type_ext: $ => choice(
      $._type,
      $._extension
    ),

    constructed_type: $ => prec(PREC.app, seq(
      choice(
        field('argument', $._simple_type_ext),
        parenthesize(sep1(',', field('argument', $._type_ext)))
      ),
      field('constructor', $.type_constructor_path)
    )),

    _simple_expression_ext: $ => choice(
      $._simple_expression,
      $._extension
    ),

    _expression_ext: $ => choice(
      $._expression,
      $._extension
    ),

    _sequence_expression_ext: $ => choice(
      $._sequence_expression,
      $._extension
    ),

    typed_expression: $ => parenthesize(seq(
      field('expression', $._sequence_expression_ext),
      $._typed
    )),

    product_expression: $ => prec.left(PREC.prod, seq(
      field('left', $._expression_ext),
      ',',
      field('right', $._expression_ext)
    )),

    cons_expression: $ => prec.right(PREC.cons, seq(
      field('left', $._expression_ext),
      '::',
      field('right', $._expression_ext)
    )),

    list_expression: $ => seq(
      '[',
      optional(seq(
        sep1(';', $._expression_ext),
        optional(';')
      )),
      ']'
    ),

    array_expression: $ => seq(
      '[|',
      optional(seq(
        sep1(';', $._expression_ext),
        optional(';')
      )),
      '|]'
    ),

    record_expression: $ => seq(
      '{',
      optional(seq(field('record', $._simple_expression_ext), 'with')),
      sep1(';', $.field_expression),
      optional(';'),
      '}'
    ),

    field_expression: $ => prec(PREC.seq, seq(
      $.field_path,
      optional($._typed),
      optional(seq('=', field('value', $._expression_ext)))
    )),

    application_expression: $ => prec.right(PREC.app, seq(
      field('function', $._simple_expression_ext),
      repeat1(field('argument', $._argument))
    )),

    _argument: $ => choice(
      $._simple_expression_ext,
      $.label,
      $.labeled_argument
    ),

    labeled_argument: $ => seq(
      $.label,
      token.immediate(':'),
      field('argument', $._simple_expression_ext)
    ),

    prefix_expression: $ => prec(PREC.prefix, seq(
      $.prefix_operator,
      field('expression', $._simple_expression_ext)
    )),

    infix_expression: $ => {
      const table = [
        {
          operator: $._pow_operator,
          precedence: PREC.pow,
          associativity: 'right'
        },
        {
          operator: $._mult_operator,
          precedence: PREC.mult,
          associativity: 'left'
        },
        {
          operator: $._add_operator,
          precedence: PREC.add,
          associativity: 'left'
        },
        {
          operator: $._concat_operator,
          precedence: PREC.concat,
          associativity: 'right'
        },
        {
          operator: $._rel_operator,
          precedence: PREC.rel,
          associativity: 'left'
        },
        {
          operator: $._and_operator,
          precedence: PREC.and,
          associativity: 'right'
        },
        {
          operator: $._or_operator,
          precedence: PREC.or,
          associativity: 'right'
        },
        {
          operator: $._assign_operator,
          precedence: PREC.assign,
          associativity: 'right'
        }
      ]

      return choice(...table.map(({operator, precedence, associativity}) =>
        prec[associativity](precedence, seq(
          field('left', $._expression_ext),
          alias(operator, $.infix_operator),
          field('right', $._expression_ext)
        ))
      ))
    },

    field_get_expression: $ => prec.left(PREC.dot, seq(
      field('record', $._simple_expression_ext),
      '.',
      $.field_path
    )),

    array_get_expression: $ => prec(PREC.dot, seq(
      field('array', $._simple_expression_ext),
      '.',
      optional($.indexing_operator_path),
      '(',
      field('index', $._sequence_expression_ext),
      ')'
    )),

    string_get_expression: $ => prec(PREC.dot, seq(
      field('string', $._simple_expression_ext),
      '.',
      optional($.indexing_operator_path),
      '[',
      field('index', $._sequence_expression_ext),
      ']'
    )),

    bigarray_get_expression: $ => prec(PREC.dot, seq(
      field('bigarray', $._simple_expression_ext),
      '.',
      optional($.indexing_operator_path),
      '{',
      field('index', $._sequence_expression_ext),
      '}'
    )),

    set_expression: $ => prec.right(PREC.assign, seq(
      choice(
        $.field_get_expression,
        $.array_get_expression,
        $.string_get_expression,
        $.bigarray_get_expression,
        $._instance_variable_name
      ),
      '<-',
      field('value', $._expression_ext)
    )),

    if_expression: $ => prec.right(PREC.if, seq(
      'if',
      optional($._attribute),
      field('condition', $._sequence_expression_ext),
      $.then_clause,
      optional($.else_clause)
    )),

    then_clause: $ => seq(
      'then',
      $._expression_ext
    ),

    else_clause: $ => seq(
      'else',
      $._expression_ext
    ),

    while_expression: $ => seq(
      'while',
      optional($._attribute),
      field('condition', $._sequence_expression_ext),
      $.do_clause
    ),

    do_clause: $ => seq(
      'do',
      optional($._sequence_expression_ext),
      'done'
    ),

    for_expression: $ => seq(
      'for',
      optional($._attribute),
      $.value_name,
      '=',
      field('from', $._sequence_expression_ext),
      choice('to', 'downto'),
      field('to', $._sequence_expression_ext),
      $.do_clause
    ),

    sequence_expression: $ => prec.right(PREC.seq, seq(
      field('left', $._expression_ext),
      ';',
      optional(seq(
        optional(seq('%', $.attribute_id)),
        field('right', $._sequence_expression_ext)
      ))
    )),

    match_expression: $ => prec.right(PREC.match, seq(
      choice(
        seq('match', optional($._attribute)),
        $.match_operator
      ),
      field('match', $._sequence_expression_ext),
      'with',
      $._match_cases
    )),

    _match_cases: $ => prec.right(seq(
      optional('|'),
      sep1('|', $.match_case)
    )),

    match_case: $ => seq(
      field('pattern', $._pattern_ext),
      optional($.guard),
      '->',
      field('body', choice($._sequence_expression_ext, $.refutation_case))
    ),

    guard: $ => seq(
      'when',
      $._sequence_expression_ext
    ),

    function_expression: $ => prec.right(PREC.match, seq(
      'function',
      optional($._attribute),
      $._match_cases
    )),

    try_expression: $ => prec.right(PREC.match, seq(
      'try',
      optional($._attribute),
      field('try', $._sequence_expression_ext),
      'with',
      $._match_cases
    )),

    let_expression: $ => prec.right(PREC.match, seq(
      $.value_definition,
      'in',
      $._sequence_expression_ext
    )),

    coercion_expression: $ => parenthesize(seq(
      field('expression', $._sequence_expression_ext),
      optional($._typed),
      ':>',
      field('coercion', $._type_ext)
    )),

    assert_expression: $ => prec.left(PREC.app, seq(
      'assert',
      optional($._attribute),
      $._simple_expression_ext
    )),

    lazy_expression: $ => prec.left(PREC.app, seq(
      'lazy',
      optional($._attribute),
      $._simple_expression_ext
    )),

    let_module_expression: $ => prec.right(PREC.match, seq(
      'let',
      $.module_definition,
      'in',
      field('body', $._sequence_expression_ext)
    )),

    let_open_expression: $ => prec.right(PREC.match, seq(
      'let',
      $.open_module,
      'in',
      field('body', $._sequence_expression_ext)
    )),

    local_open_expression: $ => seq(
      $._module_name,
      '.',
      choice(
        parenthesize(optional($._sequence_expression_ext)),
        $.list_expression,
        $.array_expression,
        $.record_expression,
        $.object_copy_expression,
        $.local_open_expression
      )
    ),

    package_expression: $ => parenthesize(seq(
      'module',
      optional($._attribute),
      field('module', $._simple_module_expression_ext),
      optional($._module_typed)
    )),

    let_exception_expression: $ => prec.right(PREC.match, seq(
      'let',
      $.exception_definition,
      'in',
      field('body', $._sequence_expression_ext)
    )),

    parenthesized_expression: $ => choice(
      seq(
        'begin',
        optional($._attribute),
        $._sequence_expression_ext,
        'end'
      ),
      parenthesize($._sequence_expression_ext)
    ),

    _simple_pattern_ext: $ => choice(
      $._simple_pattern,
      $._extension
    ),

    _pattern_ext: $ => choice(
      $._pattern,
      $._extension
    ),

    _pattern_no_exn_ext: $ => choice(
      $._pattern_no_exn,
      $._extension
    ),

    or_pattern: $ => prec.left(PREC.seq, seq(
      field('left', $._pattern_ext),
      '|',
      field('right', $._pattern_ext)
    )),

    tuple_pattern: $ => prec.left(PREC.prod, seq(
      field('left', $._pattern_ext),
      ',',
      field('right', $._pattern_ext)
    )),

    parenthesized_pattern: $ => seq(
      parenthesize($._pattern_ext)
    ),

    exception_pattern: $ => seq(
      'exception',
      optional($._attribute),
      $._pattern_ext
    ),

    // Attributes and extensions

    number: $ => NUMBER,
